<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/fragment_favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/fragment_setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />
</menu>